--- a/src/css/components.css
+++ b/src/css/components.css
@@ -3,44 +3,23 @@ input[type="checkbox"] {
   width: 20px;
 }
 
-/* input[type="checkbox"] {
-  height: 0;
-  width: 0;
-  visibility: hidden;
+select {
+  margin: 0;
+  height: 26px;
+  background-color: #f2fbff;
+  color: #232323;
+  font-size: 16px;
+  font-weight: 500;
+  border: 1px solid transparent;
+  border-radius: 5px;
+}
+
+option {
+  zoom: 1.2;
+  font-size: 14px;
+  padding: 5px 0;
 }
 
 label {
-  cursor: pointer;
-  text-indent: -9999px;
-  width: 200px;
-  height: 100px;
-  background: grey;
-  display: block;
-  border-radius: 100px;
-  position: relative;
+  color: rgba(255, 255, 255, 0.7);
 }
-
-label:after {
-  content: "";
-  position: absolute;
-  top: 5px;
-  left: 5px;
-  width: 90px;
-  height: 90px;
-  background: #fff;
-  border-radius: 90px;
-  transition: 0.3s;
-}
-
-input:checked + label {
-  background: #bada55;
-}
-
-input:checked + label:after {
-  left: calc(100% - 5px);
-  transform: translateX(-100%);
-}
-
-label:active:after {
-  width: 130px;
-} */
