sidebar bg-color based on bg-image

--- a/src/view/homePage.html
+++ b/src/view/homePage.html
@@ -315,6 +315,7 @@
     <script src="../helpers/domManipulation.js"></script>
     <script src="../helpers/links.js"></script>
     <script src="../helpers/dateTime.js"></script>
+    <script src="../helpers/colorThief.js"></script>
 
     <!-- Repositories -->
     <script src="../repository/clockRepository.js"></script>
