change icons, restructuring of css files

--- a/src/view/homePage.html
+++ b/src/view/homePage.html
@@ -7,22 +7,26 @@
 
     <link rel="stylesheet" href="../css/components.css" />
     <link rel="stylesheet" href="../css/homePage.css" />
-
     <!-- Top Left Components -->
     <link rel="stylesheet" href="../css/topLeft/linksModal.css" />
     <link rel="stylesheet" href="../css/topLeft/eachLink.css" />
     <link rel="stylesheet" href="../css/topLeft/newLinkModal.css" />
-
     <!-- Top Right Components -->
     <link rel="stylesheet" href="../css/topRight/topRightWidgets.css" />
     <link rel="stylesheet" href="../css/topRight/addEventModal.css" />
     <link rel="stylesheet" href="../css/topRight/eventDetailsModal.css" />
     <link rel="stylesheet" href="../css/topRight/updateEventModal.css" />
+    <!-- Bottom Left Components -->
+    <link rel="stylesheet" href="../css/bottomLeft/settingsModal.css" />
+    <!-- Bottom Mid Components -->
+    <link rel="stylesheet" href="../css/bottomMid/quote.css" />
+    <!-- Bottom Right Components -->
+    <link rel="stylesheet" href="../css/bottomRight/todoListModal.css" />
+    <!-- Center -->
+    <link rel="stylesheet" href="../css/center/analogClock.css" />
+    <link rel="stylesheet" href="../css/center/sidebar.css" />
 
-    <link rel="stylesheet" href="../css/analogClock.css" />
-    <link rel="stylesheet" href="../css/settingsModal.css" />
-    <link rel="stylesheet" href="../css/todoListModal.css" />
-    <link rel="stylesheet" href="../css/sidebar.css" />
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Poppins&display=swap" rel="stylesheet"> -->
@@ -48,12 +52,12 @@
         <!-- Greetings -->
         <h3 id="greetings"></h3>
       </div>
-
-      <div class="text-center bottom-third quote">
-        <div id="quote-text">"pee pee poo poo" - cum</div>
-      </div>
     </div>
 
+    <!-- Bottom Quote -->
+    <div class="text-center bottom-mid quote">
+      <div id="quote-text"></div>
+    </div>
     <!---------------------------------------------------------------------------------------------------------------->
     <!---------------------------------------------------------------------------------------------------------------->
     <!---------------------------------------------------------------------------------------------------------------->
