--- a/src/css/homePage.css
+++ b/src/css/homePage.css
@@ -61,10 +61,16 @@ h3 {
 }
 
 .centered {
-  position: fixed;
-  top: 52%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  right: 0%;
+  bottom: 0%;
+  /* transform: translate(-50%, -60%); */
 }
 
 .top-left {
@@ -126,19 +132,6 @@ h3 {
   padding: 20px 0px 0px 0px;
   font-size: 48px;
   font-weight: 100;
-}
-
-.quote {
-  /* font-family: "Helvetica Neue"; */
-  color: white;
-  font-size: 2vw;
-  letter-spacing: 1px;
-  line-height: 1;
-  margin: 0;
-}
-
-#quote-text {
-  font-size: 1.5vw;
 }
 
 #linksModalOpenBtn {
