--- a/src/view/homePage.html
+++ b/src/view/homePage.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="../css/bottomMid/quote.css" />
     <!-- Bottom Right Components -->
     <link rel="stylesheet" href="../css/bottomRight/todoListModal.css" />
+    <link rel="stylesheet" href="../css/bottomRight/singleTodoCategory.css" />
+    <link rel="stylesheet" href="../css/bottomRight/todoCategories.css" />
     <!-- Center -->
     <link rel="stylesheet" href="../css/center/analogClock.css" />
     <link rel="stylesheet" href="../css/center/sidebar.css" />
@@ -291,22 +293,28 @@
     <!-- The Modal -->
     <div id="todoListModal" class="modal">
       <!-- Modal content -->
-      <div id="myDIV" class="header">
-        <h4>Todo List</h4>
-        <i class="bi bi-x-circle" id="todoListCloseButton"></i>
-      </div>
+      <div id="singleTodoCategorySection">
+        <div id="todoHeader">
+          <!-- <div> -->
+          <h4 class="todoTitle" id="today123">Today</h4>
+          <i class="bi bi-chevron-down" id="openTodoCategoryButton"></i>
+          <!-- </div> -->
 
-      <ul id="myUL">
-        <!-- <li>Hit the gym</li>
-        <li class="checked">Pay bills</li>
-        <li>Meet George</li>
-        <li>Buy eggs</li>
-        <li>Read a book</li>
-        <li>Organize office</li> -->
-      </ul>
-      <div id="inputArea">
-        <input type="text" id="todoInput" placeholder="Add Todo..." />
-        <span id="addNewTodo" class="addBtn">Add</span>
+          <i class="bi bi-x-circle" id="todoListCloseButton"></i>
+        </div>
+        <!-- 2nd Modal for multiple todo categories -->
+        <div id="todoCategoriesSection">
+          <ul>
+            <li><span>Bruh</span><i class="bi bi-three-dots"></i></li>
+            <li><span>Lorem</span><i class="bi bi-three-dots"></i></li>
+            <li><span>Ipsum</span><i class="bi bi-three-dots"></i></li>
+          </ul>
+        </div>
+        <ul id="myUL"></ul>
+        <div id="inputArea">
+          <input type="text" id="todoInput" placeholder="Add Todo..." />
+          <span id="addNewTodo" class="addBtn">Add</span>
+        </div>
       </div>
     </div>
 
