edit todo category name done

--- a/src/view/homePage.html
+++ b/src/view/homePage.html
@@ -322,6 +322,11 @@
           <input type="text" id="newTodoCategoryInput" placeholder="Add new category..." />
           <span id="addTodoCategoryBtn">Add</span>
         </div>
+        <!-- EDIT TODO CATEGORY(NAME ONLY) -->
+        <div id="editTodoCategoryInputArea">
+          <input type="text" id="editTodoCategoryInput" placeholder="Edit category..." />
+          <span id="updateTodoCategoryBtn">Update</span>
+        </div>
       </div>
     </div>
     <!-- More Options Dialog On Side Of Each Todo Category -->
