--- a/src/view/homePage.html
+++ b/src/view/homePage.html
@@ -144,10 +144,10 @@
             <i class="bi bi-calendar-plus"></i>
             Add Event
           </div>
-          <div>
+          <!-- <div>
             <i class="bi bi-alarm"></i>
             Set Alarm
-          </div>
+          </div> -->
         </div>
       </div>
 
