some overhauls & bugfixes

--- a/src/view/homePage.html
+++ b/src/view/homePage.html
@@ -210,8 +210,8 @@
       <a href="" id="openDiscord" class="sidebarLinks">
         <i class="bi bi-discord"></i>
       </a>
-      <a href="" class="sidebarLinks">
-        <i class="bi bi-alarm"></i>
+      <a href="" id="openGmail" class="sidebarLinks">
+        <i class="bi bi-envelope-fill"></i>
       </a>
     </div>
 
@@ -233,7 +233,7 @@
         <div class="tabs">
           <button class="tabLinks" id="generalSettings">General</button>
           <button class="tabLinks" id="clockSettings">Clock</button>
-          <button class="tabLinks" id="themeSettings">Theme</button>
+          <!-- <button class="tabLinks" id="themeSettings">Theme</button> -->
           <button class="tabLinks" id="sidebarSettings">Sidebar</button>
         </div>
         <div class="tabContent">
@@ -268,7 +268,7 @@
               <input type="checkbox" id="showSidebar" />
             </div>
             <div class="tabSubContents">
-              <span>Time format:&nbsp;&nbsp;&nbsp;</span>
+              <span>Sidebar Position:&nbsp;&nbsp;&nbsp;</span>
               <select name="selectSidebarPosition" id="selectSidebarPosition">
                 <option value="left">Left</option>
                 <option value="right">Right</option>
@@ -276,8 +276,27 @@
                 <option value="bottom">Bottom</option>
               </select>
             </div>
+            <!-- <div class="tabSubContents">
+              <div>Show or Hide Items&nbsp;&nbsp;&nbsp;</div>
+            </div>
+            <div class="tabSubContents">
+              <span>&emsp;&emsp;Show Youtube:</span>
+              <input type="checkbox" id="showYoutube" />
+            </div>
+            <div class="tabSubContents">
+              <span>&emsp;&emsp;Show Whatsapp:</span>
+              <input type="checkbox" id="showWhatsapp" />
+            </div>
+            <div class="tabSubContents">
+              <span>&emsp;&emsp;Show Discord:</span>
+              <input type="checkbox" id="showDiscord" />
+            </div>
+            <div class="tabSubContents">
+              <span>&emsp;&emsp;Show Gmail:</span>
+              <input type="checkbox" id="showGmail" />
+            </div> -->
           </section>
-          <section id="themeSettingsTabContent"></section>
+          <!-- <section id="themeSettingsTabContent"></section> -->
         </div>
       </div>
     </div>
