bug fix- icon offset, new link creation modal cut before content

--- a/src/view/homePage.html
+++ b/src/view/homePage.html
@@ -106,7 +106,6 @@
           <span>&nbsp;Go back</span>
         </div>
         <br />
-        <br />
         <p>Title</p>
         <input class="linkInput" type="text" id="linkTitleInput" name="title" />
         <br />
@@ -252,6 +251,10 @@
                 <option value="24">24</option>
               </select>
             </div>
+            <!-- <div class="tabSubContents">
+              <span>Show Widgets:&nbsp;&nbsp;&nbsp;</span>
+              <input type="checkbox" id="showWidgets" />
+            </div> -->
           </section>
           <section id="clockSettingsTabContent">
             <div class="tabSubContents">
