--- a/src/css/topLeft/eachLink.css
+++ b/src/css/topLeft/eachLink.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 
 .favicon {
@@ -9,13 +10,13 @@
   width: 16px;
   margin-left: 2px;
   display: inline-block;
-  vertical-align: top;
+  vertical-align: middle;
 }
 
 #linksModal a {
   /* height: 20px; */
   flex-basis: 90%;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   margin-left: 2px;
   text-decoration: none;
   font-size: 16px;
@@ -54,13 +55,21 @@
 }
 
 #addLinkIconButton {
-  height: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
   text-decoration: none;
   font-size: 16px;
   color: #939393;
-  display: block;
   margin-left: 2px;
   transition: 0.3s;
+}
+#addLinkIconButton > i {
+  margin-right: 4px;
+  font-size: 16px;
+  padding-top: 0px;
+  padding-bottom: 4px;
 }
 #addLinkIconButton:hover {
   color: #f1f1f1;
