icon size fix in sidebar

--- a/src/view/homePage.html
+++ b/src/view/homePage.html
@@ -251,10 +251,10 @@
                 <option value="24">24</option>
               </select>
             </div>
-            <!-- <div class="tabSubContents">
+            <div class="tabSubContents">
               <span>Show Widgets:&nbsp;&nbsp;&nbsp;</span>
               <input type="checkbox" id="showWidgets" />
-            </div> -->
+            </div>
           </section>
           <section id="clockSettingsTabContent">
             <div class="tabSubContents">
