--- a/src/css/center/sidebar.css
+++ b/src/css/center/sidebar.css
@@ -9,7 +9,8 @@
   background-color: rgb(0, 0, 0);
   overflow: hidden;
   transition: 0.2s;
-
+  padding-top: 8px;
+  padding-bottom: 8px;
   border-radius: 8px;
   animation-duration: 0.3s;
   /* animation-name: slideRight; */
@@ -58,7 +59,7 @@
   margin-bottom: 2px; */
   margin: 2px;
   text-decoration: none;
-  font-size: 20px;
+  padding-bottom: 20px;
   color: #fcfcfc;
   /* background-color: rgba(33, 39, 45, 255); */
   padding: 6px 8px;
@@ -66,6 +67,7 @@
   display: block;
   transition: 0.3s;
   border: 1px solid rgba(39, 45, 51, 0);
+  line-height: 0; /* for making icon size 20x20 & not 20x28 */
 }
 .sidebarLinks:hover {
   /* color: #f1f1f1; */
@@ -76,6 +78,10 @@
   /* background: rgba(0, 0, 0, 0.8); */
   backdrop-filter: invert(0.2);
 }
+.sidebarLinks > i {
+  font-size: 20px;
+}
+
 #defaultLinks {
   fill: #818181;
   transition: 0.3s;
